--- a/x720battery.conf.example
+++ b/x720battery.conf.example
@@ -1,22 +1,18 @@
 [Domoticz]
 enabled = False
-
 host = 127.0.0.1
 port = 80
-password = ""
 username = ""
-
+password = ""
 # fill here the idx of the devices
 capacity = ?
 status = ?
 voltage = ?
 
-
 [MQTT]
 enabled = False
-
-password = ""
 username = ""
+password = ""
 port = 1883
 host = 127.0.0.1
-
+topic = x720
